incorrect shaping of scalarFuncPlotRefine` `

--- a/examples/plotting/2D_Plotting_Gradient.ipynb
+++ b/examples/plotting/2D_Plotting_Gradient.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
@@ -31,7 +31,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Initialized: <horton.gbasis.cext.GOBasis object at 0x7f497e3cdfa0>\n",
+      "\n",
+      "\n",
+      "User:           woodn\n",
+      "Machine info:   Linux woodn 5.13.8-arch1-1 #1 SMP PREEMPT Wed, 04 Aug 2021 16:57:44 +0000 x86_64\n",
+      "Time:           2021-08-13T12:58:56.319030\n",
+      "Python version: 2.7.18 |Anaconda, Inc.| (default, Jun  4 2021, 14:47:46) [GCC 7.3.0]\n",
+      "HORTON version: 2.1.0\n",
+      "Current Dir:    /home/woodn/GSOC/projects/chemtools/examples/plotting\n",
+      "Command line:   /home/woodn/.conda/envs/chemtools/lib/python2.7/site-packages/ipykernel_launcher.py\n",
+      "                -f\n",
+      "                /home/woodn/.local/share/jupyter/runtime/kernel-baedc8d9-34ca-42eb-96e1-a8fc46e1b2cd\n",
+      "                .json\n",
+      "HORTON module:  /home/woodn/.conda/envs/chemtools/lib/python2.7/site-packages/horton/log.pyc\n",
+      "\n",
+      "Initialized: <horton.gbasis.cext.GOBasis object at 0x7fc5fbe50d00>\n",
       "  Number of basis functions         : 219\n",
       "  Number of normalization constants : 453\n",
       "  Maximum shell type                : 2\n",
@@ -59,6 +73,65 @@
       " [-1.70075352e-04 -5.47831606e+00  1.51178091e-04]\n",
       " [-4.10063012e+00 -3.05289036e+00 -7.55890453e-05]\n",
       " [ 4.10047894e+00 -3.05315492e+00  2.83458920e-04]]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/woodn/GSOC/programs/chemtools/chemtools/chemtools/outputs/plot.py:27: UserWarning: \n",
+      "This call to matplotlib.use() has no effect because the backend has already\n",
+      "been chosen; matplotlib.use() must be called *before* pylab, matplotlib.pyplot,\n",
+      "or matplotlib.backends is imported for the first time.\n",
+      "\n",
+      "The backend was *originally* set to 'module://ipykernel.pylab.backend_inline' by the following code:\n",
+      "  File \"/home/woodn/.conda/envs/chemtools/lib/python2.7/runpy.py\", line 174, in _run_module_as_main\n",
+      "    \"__main__\", fname, loader, pkg_name)\n",
+      "  File \"/home/woodn/.conda/envs/chemtools/lib/python2.7/runpy.py\", line 72, in _run_code\n",
+      "    exec code in run_globals\n",
+      "  File \"/home/woodn/.conda/envs/chemtools/lib/python2.7/site-packages/ipykernel_launcher.py\", line 16, in <module>\n",
+      "    app.launch_new_instance()\n",
+      "  File \"/home/woodn/.conda/envs/chemtools/lib/python2.7/site-packages/traitlets/config/application.py\", line 664, in launch_instance\n",
+      "    app.start()\n",
+      "  File \"/home/woodn/.conda/envs/chemtools/lib/python2.7/site-packages/ipykernel/kernelapp.py\", line 499, in start\n",
+      "    self.io_loop.start()\n",
+      "  File \"/home/woodn/.conda/envs/chemtools/lib/python2.7/site-packages/tornado/ioloop.py\", line 1073, in start\n",
+      "    handler_func(fd_obj, events)\n",
+      "  File \"/home/woodn/.conda/envs/chemtools/lib/python2.7/site-packages/tornado/stack_context.py\", line 300, in null_wrapper\n",
+      "    return fn(*args, **kwargs)\n",
+      "  File \"/home/woodn/.conda/envs/chemtools/lib/python2.7/site-packages/zmq/eventloop/zmqstream.py\", line 462, in _handle_events\n",
+      "    self._handle_recv()\n",
+      "  File \"/home/woodn/.conda/envs/chemtools/lib/python2.7/site-packages/zmq/eventloop/zmqstream.py\", line 492, in _handle_recv\n",
+      "    self._run_callback(callback, msg)\n",
+      "  File \"/home/woodn/.conda/envs/chemtools/lib/python2.7/site-packages/zmq/eventloop/zmqstream.py\", line 444, in _run_callback\n",
+      "    callback(*args, **kwargs)\n",
+      "  File \"/home/woodn/.conda/envs/chemtools/lib/python2.7/site-packages/tornado/stack_context.py\", line 300, in null_wrapper\n",
+      "    return fn(*args, **kwargs)\n",
+      "  File \"/home/woodn/.conda/envs/chemtools/lib/python2.7/site-packages/ipykernel/kernelbase.py\", line 283, in dispatcher\n",
+      "    return self.dispatch_shell(stream, msg)\n",
+      "  File \"/home/woodn/.conda/envs/chemtools/lib/python2.7/site-packages/ipykernel/kernelbase.py\", line 233, in dispatch_shell\n",
+      "    handler(stream, idents, msg)\n",
+      "  File \"/home/woodn/.conda/envs/chemtools/lib/python2.7/site-packages/ipykernel/kernelbase.py\", line 399, in execute_request\n",
+      "    user_expressions, allow_stdin)\n",
+      "  File \"/home/woodn/.conda/envs/chemtools/lib/python2.7/site-packages/ipykernel/ipkernel.py\", line 208, in do_execute\n",
+      "    res = shell.run_cell(code, store_history=store_history, silent=silent)\n",
+      "  File \"/home/woodn/.conda/envs/chemtools/lib/python2.7/site-packages/ipykernel/zmqshell.py\", line 537, in run_cell\n",
+      "    return super(ZMQInteractiveShell, self).run_cell(*args, **kwargs)\n",
+      "  File \"/home/woodn/.conda/envs/chemtools/lib/python2.7/site-packages/IPython/core/interactiveshell.py\", line 2714, in run_cell\n",
+      "    interactivity=interactivity, compiler=compiler, result=result)\n",
+      "  File \"/home/woodn/.conda/envs/chemtools/lib/python2.7/site-packages/IPython/core/interactiveshell.py\", line 2818, in run_ast_nodes\n",
+      "    if self.run_code(code, result):\n",
+      "  File \"/home/woodn/.conda/envs/chemtools/lib/python2.7/site-packages/IPython/core/interactiveshell.py\", line 2878, in run_code\n",
+      "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
+      "  File \"<ipython-input-1-5d0984a035ed>\", line 3, in <module>\n",
+      "    import matplotlib.pyplot as plt\n",
+      "  File \"/home/woodn/.conda/envs/chemtools/lib/python2.7/site-packages/matplotlib/pyplot.py\", line 71, in <module>\n",
+      "    from matplotlib.backends import pylab_setup\n",
+      "  File \"/home/woodn/.conda/envs/chemtools/lib/python2.7/site-packages/matplotlib/backends/__init__.py\", line 16, in <module>\n",
+      "    line for line in traceback.format_stack()\n",
+      "\n",
+      "\n",
+      "  matplotlib.use('agg')\n"
      ]
     }
    ],
@@ -102,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,15 +437,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-207-95317d26ac8b>, line 50)",
+     "evalue": "invalid syntax (<ipython-input-59-f6f98813f63b>, line 52)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-207-95317d26ac8b>\"\u001b[0;36m, line \u001b[0;32m50\u001b[0m\n\u001b[0;31m    return rot\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-59-f6f98813f63b>\"\u001b[0;36m, line \u001b[0;32m52\u001b[0m\n\u001b[0;31m    return rot\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -506,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -515,7 +588,7 @@
     "coord2 = coord[1]\n",
     "coord3 = coord[2]\n",
     "\n",
-    "def plotScalarFunctionContourPlot(coord1, coord2, coord3,scalarFunc,step_size=0.3):\n",
+    "def plotScalarFunctionContourPlot(coord1, coord2, coord3,step_size=0.3):\n",
     "    v1, v2 = coord1 - coord3, coord2 - coord3\n",
     "    normal = np.cross(v1, v2)\n",
     "    normal /= np.linalg.norm(normal)\n",
@@ -559,82 +632,114 @@
     "    print(\"Grid Plane:\")\n",
     "    print(grid_plane)\n",
     "\n",
-    "    x = grid_plane[:,0]\n",
-    "    y = grid_plane[:,1]\n",
+    "    x = grid_2d[:,0]\n",
+    "    y = grid_2d[:,1]\n",
+    "    xy = np.meshgrid(grid_2d[:,0],grid_2d[:,1])\n",
+    "    \n",
     "    scalarFunc = mol.compute_density(grid_plane)\n",
     "    scalarFuncPlot = np.array(scalarFunc)\n",
+    "    \n",
+    "    \n",
+    "    print(np.shape(grid_2d))\n",
+    "    print(np.shape(scalarFuncPlot))\n",
     "\n",
-    "    #proj = (np.dot(x, y) / np.linalg.norm(y))\n",
-    "    scalarFuncPlot = np.broadcast_to((scalarFuncPlot*scalarFuncPlot).sum(-1)[...,None], scalarFuncPlot.shape)\n",
-    "\n",
-    "    proj = density - np.dot(density,normal)[:,np.newaxis] * normal\n",
-    "    rotProj = np.dot(rot,proj.T).T\n",
-    "    rotProj /=np.linalg.norm(rotProj,axis=1).reshape((-1,1))\n",
-    "    scalarFuncPlot = np.array(scalarFunc)\n",
-    "    # rotScalarFunc = \n",
+    "    lenScalarFuncPlot = len(scalarFuncPlot)\n",
+    "    print(lenScalarFuncPlot)\n",
+    "          \n",
+    "    # PROBLEMATIC \n",
+    "    scalarFuncPlotRefine = np.atleast_2d(scalarFuncPlot)\n",
+    "    print('scalar')\n",
+    "    print(scalarFuncPlotRefine)\n",
+    "    #scalarFuncPlotRefine = scalarFuncPlotRefine.reshape((lenScalarFuncPlot),lenScalarFuncPlot))\n",
+    "    \n",
+    "    print(scalarFuncPlotRefine.shape())\n",
+    "    \n",
     "    #levels = np.array([0.001 * n * n for n in range(1)])\n",
     "    levels = 1\n",
-    "    #plt.contour(x,y,scalarFuncPlot,levels)\n",
+    "    plt.contour(x,y,scalarFuncPlotRefine,levels)\n",
     "    plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Orthonormal : \n",
+      "Rotation Operation: \n",
       "[[-6.97331320e-01  7.16748929e-01 -4.77061362e-05]\n",
       " [ 7.16748929e-01  6.97331321e-01  2.01453432e-05]\n",
       " [ 4.77061362e-05 -2.01453432e-05 -9.99999999e-01]]\n",
-      "grid plane\n",
+      "Rotation Coordinates: \n",
+      "[[ 0.00000000e+00  0.00000000e+00  0.00000000e+00]\n",
+      " [-6.90578162e+00  7.09758945e+00  3.32933254e-20]\n",
+      " [-3.78908149e+00  3.22168550e+00  6.49732457e-21]\n",
+      " [-7.55924902e+00 -4.46580843e-01 -2.63191882e-05]\n",
+      " [-5.01995578e+00 -1.16084361e+00 -2.95672968e-05]\n",
+      " [-8.20369267e+00  2.11132954e+00 -7.37073181e-07]\n",
+      " [-3.23205529e+00  7.81105542e-01 -5.68426273e-05]\n",
+      " [-6.21348886e+00  3.84534212e+00  3.37365785e-05]\n",
+      " [-9.03609861e+00 -1.88352622e+00 -2.26066815e-05]\n",
+      " [-4.43829811e+00 -3.13120126e+00 -4.03176841e-05]\n",
+      " [-1.01573780e+01  2.74675040e+00 -8.11709351e-06]]\n",
+      "Grid Plane:\n",
       "[[-1.31954229e-01 -8.56611497e+00  1.84489266e-04]\n",
       " [ 8.30704494e-02 -8.35691557e+00  1.90532869e-04]\n",
       " [ 2.98095128e-01 -8.14771618e+00  1.96576472e-04]\n",
       " ...\n",
       " [-3.23166990e-01  8.40867332e+00 -1.66595694e-04]\n",
       " [-1.08142311e-01  8.61787272e+00 -1.60552091e-04]\n",
-      " [ 1.06882368e-01  8.82707212e+00 -1.54508488e-04]]\n"
+      " [ 1.06882368e-01  8.82707212e+00 -1.54508488e-04]]\n",
+      "(1764, 2)\n",
+      "(1764,)\n",
+      "1764\n",
+      "scalar\n",
+      "[[2.17212008e-04 3.59387779e-04 5.82559952e-04 ... 6.25544026e-06\n",
+      "  4.63270562e-06 3.42546710e-06]]\n"
      ]
     },
     {
-     "ename": "ValueError",
-     "evalue": "shapes (1764,) and (3,) not aligned: 1764 (dim 0) != 3 (dim 0)",
+     "ename": "TypeError",
+     "evalue": "'tuple' object is not callable",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-214-4bba75dd2f37>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mplotScalarFunctionContourPlot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcoord1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcoord2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcoord3\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mscalarFunc\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mstep_size\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0.3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-213-e4bd0a8d778e>\u001b[0m in \u001b[0;36mplotScalarFunctionContourPlot\u001b[0;34m(coord1, coord2, coord3, scalarFunc, step_size)\u001b[0m\n\u001b[1;32m     54\u001b[0m     \u001b[0mscalarFuncPlot\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbroadcast_to\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mscalarFuncPlot\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mscalarFuncPlot\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mNone\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mscalarFuncPlot\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     55\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 56\u001b[0;31m     \u001b[0mproj\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdensity\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdensity\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mnormal\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnewaxis\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mnormal\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     57\u001b[0m     \u001b[0mrotProj\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrot\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mproj\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mT\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mT\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     58\u001b[0m     \u001b[0mrotProj\u001b[0m \u001b[0;34m/=\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlinalg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnorm\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrotProj\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: shapes (1764,) and (3,) not aligned: 1764 (dim 0) != 3 (dim 0)"
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-95-ed723bad580e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mplotScalarFunctionContourPlot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcoord1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcoord2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcoord3\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mstep_size\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0.3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-94-c5d26042b947>\u001b[0m in \u001b[0;36mplotScalarFunctionContourPlot\u001b[0;34m(coord1, coord2, coord3, step_size)\u001b[0m\n\u001b[1;32m     68\u001b[0m     \u001b[0;31m#scalarFuncPlotRefine = scalarFuncPlotRefine.reshape((lenScalarFuncPlot),lenScalarFuncPlot))\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     69\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 70\u001b[0;31m     \u001b[0;32mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mscalarFuncPlotRefine\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     71\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     72\u001b[0m     \u001b[0;31m#levels = np.array([0.001 * n * n for n in range(1)])\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'tuple' object is not callable"
      ]
     }
    ],
    "source": [
-    "plotScalarFunctionContourPlot(coord1, coord2, coord3,scalarFunc,step_size=0.3)"
+    "plotScalarFunctionContourPlot(coord1, coord2, coord3,step_size=0.3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 1.70982687e-05  5.10868096e-04 -6.55691344e-09]\n",
-      " [-2.04658254e-05  8.72965114e-04 -1.29942129e-08]\n",
-      " [-1.34014657e-04  1.43885163e-03 -2.51374698e-08]\n",
-      " ...\n",
-      " [ 3.92944438e-08 -8.98940297e-06  1.84799988e-10]\n",
-      " [ 3.01288771e-09 -6.67502749e-06  1.34390522e-10]\n",
-      " [ 4.24791253e-09 -4.95304702e-06  9.83619427e-11]]\n",
-      "[2.17212008e-04 3.59387779e-04 5.82559952e-04 ... 6.25544026e-06\n",
-      " 4.63270562e-06 3.42546710e-06]\n"
+     "ename": "NameError",
+     "evalue": "name 'grid_plane' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-89-12332165cee5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mgradient\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmol\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcompute_gradient\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgrid_plane\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgradient\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mscalarFunc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'grid_plane' is not defined"
      ]
     }
    ],
@@ -643,6 +748,13 @@
     "print(gradient)\n",
     "print(scalarFunc)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
