modified scalemin to accept chimerax computation; added verbosity to 3D annotation

--- a/examples/annotate_3D/3DimensionAnnotation.ipynb
+++ b/examples/annotate_3D/3DimensionAnnotation.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "d869e72c",
+   "id": "3a98701f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,15 +13,13 @@
     "import iodata\n",
     "from iodata import load_one, dump_one \n",
     "\n",
-    "from biopandas.pdb import PandasPdb\n",
-    "import io\n",
-    "from typing import TextIO, Iterator\n"
+    "import io\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "aadb1e41",
+   "id": "1a9a64b9",
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "2f0fd102",
+   "id": "3fde180d",
    "metadata": {},
    "outputs": [
     {
@@ -102,15 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22c275bd",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "16fe8bd4",
+   "id": "cda77d5f",
    "metadata": {},
    "outputs": [],
    "source": []
