finalized, consolidated into functions

--- a/examples/annotate_3D/3DimensionAnnotation.ipynb
+++ b/examples/annotate_3D/3DimensionAnnotation.ipynb
@@ -150,11 +150,141 @@
     "To visualize our file:\n",
     "\n",
     "1. Open ChimeraX\n",
-    "2. Either enter into the ChimeraX Command Line `open outFileName` or use File > Open from the uppermost toolbar \n",
+    "2. Either enter into the ChimeraX Command Line `open outFile.pdb` or use File > Open from the uppermost toolbar \n",
     "3. Once the PDB has been loaded, run from ChimeraX Command Line `label #1 atoms attribute bfactor` or use Actions > Label > Atoms > Other > Bfactor, from the afforementioned toolbar \n",
     "\n",
     "The below example is 2,6-Dichloropyridine, annotated with the Electrostatic Potential Charges obtained using IOData's `atcharge` function"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "35dc311a",
+   "metadata": {},
+   "source": [
+    "## Consolidating 3D Annotations into a Function 3DAnnotate():\n",
+    "The afforementioned means to annotating 3D molecules has been consolidated into a script for ease of use and modularity\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "ab2441fb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Annotate3D(inFile):\n",
+    "    \"\"\"\n",
+    "    This script allows one to take an input file, \n",
+    "    \n",
+    "    TO VIEW ANNOTATIONS IN CHIMERAX \n",
+    "        DOWNLOAD CHIMERAX \n",
+    "            Nightly and Stable Releases of ChimeraX can be found below, courtesy of University of California San Francisco\n",
+    "            \n",
+    "            https://www.cgl.ucsf.edu/chimerax/download.html\n",
+    "            \n",
+    "        VISUALIZE ANNOTATIONS\n",
+    "            1. Open ChimeraX\n",
+    "            2. Either enter into the ChimeraX Command Line open outFile.pdb or use File > Open from the uppermost toolbar \n",
+    "            3. Once the PDB has been loaded, run from ChimeraX Command Line label #1 atoms attribute bfactor or use Actions > Label > Atoms > Other > Bfactor, from the afforementioned toolbar \n",
+    "    \n",
+    "    END VIEWING INSTRUCTIONS\n",
+    "    \n",
+    "    PARAMETERS\n",
+    "        inFile, str\n",
+    "            This represents the input file, which should be a Gaussian CheckPoint File, also known as *.fchk\n",
+    "          \n",
+    "        interFile, str\n",
+    "            This is the intermediate PDB File in which B Factor Values are written into, it is named 'intermediate.pdb'\n",
+    "        \n",
+    "        outFile, str\n",
+    "            This is the final PDB File in which our B Factor Values are written into, originating from interFile\n",
+    "            This is the file we open in ChimeraX\n",
+    "            \n",
+    "        title, str\n",
+    "            Title of the molecule\n",
+    "        \n",
+    "        workingBFactor, IOData call\n",
+    "            This represents the data we wish to write to PDB B Factor Column and annotate.\n",
+    "            While this example uses the IOData Call atcharges['esp'][:] to input electrostatic potential charges, it can be other values\n",
+    "            IOData calls can be found here:\n",
+    "                \n",
+    "                https://iodata.readthedocs.io/en/latest/index.html\n",
+    "                \n",
+    "    END PARAMETERS \n",
+    "     \"\"\"\n",
+    "    \n",
+    "    # DEPENDENCIES\n",
+    "    import iodata\n",
+    "    from iodata import load_one, dump_one \n",
+    "    # END DEPENDENCIES\n",
+    "    \n",
+    "    inFile = 'dichloropyridine26_q+0.fchk'\n",
+    "    interFile = 'intermediate.pdb'\n",
+    "    outFile = f\"{inFile[:-5]}.pdb\" \n",
+    "    title = inFile[:-5]\n",
+    "\n",
+    "    print(\"Filenames: \")\n",
+    "    print(inFile)\n",
+    "    print(interFile)\n",
+    "    print(outFile)\n",
+    "    print(\" \")\n",
+    "    print(\"Name of Molecule:\")\n",
+    "    print(title)\n",
+    "    print(\" \")\n",
+    "\n",
+    "    loadInput = load_one(inFile)\n",
+    "    \n",
+    "    # EDIT workingBFactor TO CHANGE ANNOTATION VALUES\n",
+    "    workingBFactor = loadInput.atcharges['esp'][:] \n",
+    "    \n",
+    "    \n",
+    "    print(\"Our Working B Factor to replace within IOData Dump : \")\n",
+    "    print(workingBFactor)\n",
+    "    print(f\"\\nWill be written to {outFile} and dumped\")\n",
+    "    dump_one(loadInput,interFile)\n",
+    "    \n",
+    "    # END FUNCTION "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "ea486fba",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Filenames: \n",
+      "dichloropyridine26_q+0.fchk\n",
+      "intermediate.pdb\n",
+      "dichloropyridine26_q+0.pdb\n",
+      " \n",
+      "Name of Molecule:\n",
+      "dichloropyridine26_q+0\n",
+      " \n",
+      "Our Working B Factor to replace within IOData Dump : \n",
+      "[-0.11982276 -0.11982857 -0.53824353  0.26057369 -0.45320065 -0.4532028\n",
+      "  0.49976881  0.49977265  0.0844758   0.16985231  0.16985503]\n",
+      "\n",
+      "Will be written to dichloropyridine26_q+0.pdb and dumped\n"
+     ]
+    }
+   ],
+   "source": [
+    "inFile = 'dichloropyridine26_q+0.fchk'\n",
+    "Annotate3D(inFile)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ceeb57a0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
