improved comments and formatting

--- a/examples/plotting/2D_Plotting_Gradient.ipynb
+++ b/examples/plotting/2D_Plotting_Gradient.ipynb
@@ -284,24 +284,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-26-19db3e1eb66b>, line 115)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-26-19db3e1eb66b>\"\u001b[0;36m, line \u001b[0;32m115\u001b[0m\n\u001b[0;31m    plt.savefig(f\"{imageName}.png\")\u001b[0m\n\u001b[0m                                 ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def plotVectorFieldOverPlane(inFile,step_size=0.32, title=''):\n",
     "    \"\"\"\n",
     "    This script will plot a vector quality of a molecule as a gradient plot\n",
     "    \n",
-    "    CONDA ENVIRONMENT\n",
+    "    Conda Environment\n",
+    "    -----------------\n",
     "        This function must be executed in a conda environment containing: \n",
     "            chemtools\n",
     "            \n",
@@ -312,8 +304,22 @@
     "            Numpy\n",
     "            MatPlotLib \n",
     "    \n",
-    "    PARAMETERS\n",
+    "    Parameters\n",
+    "    -----------\n",
     "    \n",
+    "    inFile : str\n",
+    "        This represents our input file.\n",
+    "        Our example is dichloropyridine26_q+0.fchk\n",
+    "    \n",
+    "    stepSize : float\n",
+    "        Step Size of 2D Affine Grid\n",
+    "        \n",
+    "    title : str\n",
+    "        Title of plot\n",
+    "    \n",
+    "    mol : chemtools object\n",
+    "            load inFile as chemtools Molecule module\n",
+    "            \n",
     "    coord1 : np.ndarray()\n",
     "        First point on plane \n",
     "        \n",
@@ -324,33 +330,31 @@
     "        Third Point on plane\n",
     "    \n",
     "    normal : np.cross()\n",
-    "        orthonormalization of coordinates\n",
+    "        Orthonormalization of coordinates\n",
+    "        \n",
+    "    rot : np.array()\n",
+    "        Our rotation matrix\n",
+    "    \n",
+    "    rot_coords : np.dot()\n",
+    "        Pass our coordinates through the rotation matrix to rotate our affine plane\n",
+    "        \n",
+    "    grid_zeros : np.hstack()\n",
+    "        Populate our affine plane with zeros to then populate with our computer vector function\n",
     "        \n",
     "    vectorFunc : callabel() \n",
     "        Vector Field that inputs 3D point to 3D point \n",
     "        In this example, vectorFunc is mol.compute_gradient()\n",
-    "    \n",
-    "    \n",
-    "    stepSize : float\n",
-    "        Step Size of 2D Affine Grid\n",
     "        \n",
-    "    title : str\n",
-    "        Title of plot\n",
-    "    \n",
     "    color : str\n",
     "        Color of Gradient Arrows  \n",
     "    \n",
     "    scale : int\n",
     "        Scale of Gradient Arrows\n",
+    "        \n",
+    "    --------------\n",
+    "    End Parameters\n",
     "    \"\"\"\n",
-    "    # DEPENDENCIES\n",
-    "    import numpy as np\n",
-    "\n",
-    "    import matplotlib.pyplot as plt\n",
-    "    from mpl_toolkits import mplot3d\n",
-    "\n",
-    "    from chemtools import Molecule\n",
-    "    #END DEPENDENCIES\n",
+    "    \n",
     "    \n",
     "    mol = Molecule.from_file(inFile)\n",
     "    coord = mol.coordinates\n",
@@ -402,6 +406,8 @@
     "    \n",
     "    # Rotate Projected Plane.\n",
     "    rot_proj_gradients /= np.linalg.norm(rot_proj_gradients, axis=1).reshape((-1, 1))\n",
+    "    \n",
+    "    #Visualize our plot \n",
     "    plt.figure(figsize=(10,10))\n",
     "    plt.quiver(grid_2d[:, 0], grid_2d[:, 1],\n",
     "         rot_proj_gradients[:, 0], rot_proj_gradients[:, 1],color='black', scale=45)\n",
@@ -410,20 +416,19 @@
     "    \n",
     "    plt.title(title)\n",
     "    \n",
-    "    imageName = inFile[:-5]\n",
-    "    plt.savefig(f\"{imageName}.png\")"
+    "   "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Initialized: <horton.gbasis.cext.GOBasis object at 0x7fc93065f910>\n",
+      "Initialized: <horton.gbasis.cext.GOBasis object at 0x7faae56ead00>\n",
       "  Number of basis functions         : 219\n",
       "  Number of normalization constants : 453\n",
       "  Maximum shell type                : 2\n",
@@ -487,7 +492,7 @@
     "Scalar qualities, such as electron density, cannot be visualized as a gradient field. Instead, we can represent these qualities as level curves of a contour plot\n",
     "\n",
     "## Rotation Matrix\n",
-    "Much like the previous function detailing the creating of a 3D rotation matrix to rotate our affine plane, for scalar qualities, we will use a 2D Rotation matrix instead.\n",
+    "Much like the previous function detailing the creating of a 3D rotation matrix to rotate our affine plane.\n",
     "\n",
     "## Computing our Qualities Against the Affine Plane\n",
     "In this example, we use `mol.compute_density()` to compute electron density against the affine plane. \n",
@@ -500,25 +505,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-38-078ae743835e>, line 96)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-38-078ae743835e>\"\u001b[0;36m, line \u001b[0;32m96\u001b[0m\n\u001b[0;31m    plt.savefig(f\"{fileName}.png\")\u001b[0m\n\u001b[0m                                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "def plotScalarFunctionContourPlot(inFile, step_size=0.3, title= 'Contour Plot'):\n",
     "    \"\"\"\n",
     "    This script will plot a vector quality of a molecule as a gradient plot\n",
     "    \n",
-    "    CONDA ENVIRONMENT\n",
+    "    Conda Environment\n",
+    "    -----------------\n",
     "        This function must be executed in a conda environment containing: \n",
     "            chemtools\n",
     "            \n",
@@ -528,7 +525,9 @@
     "                \n",
     "            Numpy\n",
     "            MatPlotLib \n",
-    "    PARAMETERS\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
     "    \n",
     "        inFile, str\n",
     "            This represents our input Gaussian Checkpoint *.fchk file\n",
@@ -603,24 +602,23 @@
     "    # reshape level curves array to resemble length of x and y , with Fortran style iteration\n",
     "    scalarFuncPlot = scalarFunc.reshape((len(x_grid), len(y_grid)), order=\"F\")\n",
     "    plt.figure(figsize=(10,10))\n",
+    "    plt.contour(x_grid,y_grid,scalarFuncPlot, levels )\n",
     "    plt.title(\"Contour Plot of Electrostatic Density\")\n",
     "\n",
-    "    plt.contour(x_grid,y_grid,scalarFuncPlot, levels )\n",
-    "    fileName = inFile[:-5]\n",
-    "    \n",
-    "    plt.savefig(f\"{fileName}.png\")"
+    "    plt.show()\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Initialized: <horton.gbasis.cext.GOBasis object at 0x7fc931b57670>\n",
+      "Initialized: <horton.gbasis.cext.GOBasis object at 0x7faae56f8c20>\n",
       "  Number of basis functions         : 219\n",
       "  Number of normalization constants : 453\n",
       "  Maximum shell type                : 2\n",
@@ -677,19 +675,17 @@
     }
    ],
    "source": [
+    "import numpy as np\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "from mpl_toolkits import mplot3d\n",
+    "\n",
+    "from chemtools import Molecule\n",
+    "\n",
     "inFile = 'dichloropyridine26_q+0.fchk'\n",
     "\n",
     "\n",
     "plotScalarFunctionContourPlot(inFile,step_size=0.3, title='Contour Plot' )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(scalarFunc)"
    ]
   },
   {
