improved annotations per Alis suggestion

--- a/examples/annotate_3D/3DimensionAnnotation.ipynb
+++ b/examples/annotate_3D/3DimensionAnnotation.ipynb
@@ -173,27 +173,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import iodata\n",
+    "from iodata import load_one, dump_one \n",
+    "\n",
     "def Annotate3D(inFile):\n",
     "    \"\"\"\n",
-    "    This script allows one to take an input file, \n",
+    "    This script allows one to take an input file, generates an intermediate PDB file, then writes data values to the B Factor Column of the intermediate to produce the final output PDB\n",
     "    \n",
-    "    TO VIEW ANNOTATIONS IN CHIMERAX \n",
-    "        DOWNLOAD CHIMERAX \n",
+    "    To View Annotations In ChimeraX \n",
+    "    -------------------------------\n",
+    "        Download Chimerax\n",
+    "        -----------------\n",
     "            Nightly and Stable Releases of ChimeraX can be found below, courtesy of University of California San Francisco\n",
     "            \n",
     "            https://www.cgl.ucsf.edu/chimerax/download.html\n",
     "            \n",
-    "        VISUALIZE ANNOTATIONS\n",
+    "        Visualizing Annotation\n",
+    "        ----------------------\n",
     "            1. Open ChimeraX\n",
-    "            2. Either enter into the ChimeraX Command Line open outFile.pdb or use File > Open from the uppermost toolbar \n",
-    "            3. Once the PDB has been loaded, run from ChimeraX Command Line label #1 atoms attribute bfactor or use Actions > Label > Atoms > Other > Bfactor, from the afforementioned toolbar \n",
+    "            2. Either enter into the ChimeraX command line `open outFile.pdb` or use File > Open from the uppermost toolbar \n",
+    "            3. Once the PDB has been loaded, run from ChimeraX command line `label #1 atoms attribute bfactor` or use Actions > Label > Atoms > Other > Bfactor, from the afforementioned toolbar \n",
     "    \n",
-    "    END VIEWING INSTRUCTIONS\n",
+    "    Yields \n",
+    "    ------\n",
+    "    This function produces a PDB File (outFile), which can then be viewed in ChimeraX\n",
     "    \n",
-    "    PARAMETERS\n",
-    "        inFile, str\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    \n",
+    "        inFile : str\n",
     "            This represents the input file, which should be a Gaussian CheckPoint File, also known as *.fchk\n",
     "          \n",
+    "        workingBFactor, IOData call\n",
+    "            This represents the data we wish to write to PDB B Factor Column and annotate.\n",
+    "            While this example uses the IOData Call atcharges['esp'][:] to input electrostatic potential charges, it can be other values\n",
+    "            IOData calls can be found here:\n",
+    "                \n",
+    "                https://iodata.readthedocs.io/en/latest/index.html\n",
+    "                \n",
     "        interFile, str\n",
     "            This is the intermediate PDB File in which B Factor Values are written into, it is named 'intermediate.pdb'\n",
     "        \n",
@@ -204,20 +221,10 @@
     "        title, str\n",
     "            Title of the molecule\n",
     "        \n",
-    "        workingBFactor, IOData call\n",
-    "            This represents the data we wish to write to PDB B Factor Column and annotate.\n",
-    "            While this example uses the IOData Call atcharges['esp'][:] to input electrostatic potential charges, it can be other values\n",
-    "            IOData calls can be found here:\n",
-    "                \n",
-    "                https://iodata.readthedocs.io/en/latest/index.html\n",
-    "                \n",
-    "    END PARAMETERS \n",
+    "    --------------            \n",
+    "    End Parameters \n",
     "     \"\"\"\n",
-    "    \n",
-    "    # DEPENDENCIES\n",
-    "    import iodata\n",
-    "    from iodata import load_one, dump_one \n",
-    "    # END DEPENDENCIES\n",
+    "\n",
     "    \n",
     "    inFile = 'dichloropyridine26_q+0.fchk'\n",
     "    interFile = 'intermediate.pdb'\n",
