update authors email

--- a/AUTHORS
+++ b/AUTHORS
@@ -6,7 +6,7 @@ Esteban Vohringer-Martine <estebanvohringer@gmail.com>
 Fanwang Meng <fwmeng88@gmail.com>
 Farnaz Heidar-Zadeh <farnaz_chem@yahoo.com>
 Gaby <diazg1@mcmaster.ca>
-Matthew Chan <chanmhy@mcmaster.ca>
+Matthew Chan <mattchan@tencent.com>
 Michael Richer <richerm@mcmaster.ca>
 PaulWAyers <ayers@mcmaster.ca>
 Stijn Fias <stijn.fias@gmail.com>
